<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="top|center_vertical|center_horizontal|center" android:orientation="vertical" android:background="#0090b0" android:padding="4dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="6dp">
        <ImageView android:id="@+id/regImageView1" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="25dp" android:src="@drawable/image_4"
            android:contentDescription="@string/todo" />
        <TextView android:fontFamily="serif-monospace" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/pic"/>
        <EditText android:id="@+id/regEditText1" android:fontFamily="serif-monospace" android:background="#fffa92" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:hint="@string/un" android:ems="10"
            android:autofillHints=""
            android:inputType="textAutoComplete"  />
        <EditText android:fontFamily="serif-monospace" android:id="@+id/regEditText2" android:background="#fffa92" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:hint="البريد الالكتروني" android:ems="10" android:inputType="textEmailAddress"
            android:autofillHints=""
            tools:ignore="HardcodedText" />
        <EditText android:id="@+id/regEditText3" android:fontFamily="serif-monospace" android:background="#fffa92" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:hint="كلمة المرور" android:ems="10" android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="HardcodedText" />
        <Button android:id="@+id/regButton1" android:background="#a51b12" android:fontFamily="serif-monospace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25dp" android:text="تسجيل" android:shadowRadius="0.5"
            tools:ignore="HardcodedText" />
        <Button android:id="@+id/regButton2" android:layout_width="wrap_content" android:fontFamily="serif-monospace" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="رجوع لتسجيل الدخول"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
